undo, redo, picture upload and mode feature are done

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <span class="tool-item material-symbols-outlined note">
             add_notes
         </span>
-        <span class="tool-item material-symbols-outlined">
+        <span class="tool-item material-symbols-outlined undo">
             undo
         </span>
-        <span class="tool-item material-symbols-outlined">
+        <span class="tool-item material-symbols-outlined redo">
             redo
         </span>
         <span class="tool-item material-symbols-outlined mode">
